# gita-agent

./: .env.example  .gitignore  Dockerfile.ingestion  README.md  pyproject.toml  requirements.txt
agent/: agent.py
docs/: SETUP_GUIDE.md  detailed_technical_design.md  task.md  technology_decisions.md
ingestion/: audio.py  chunking.py  drive.py  observability.py  orchestrator.py  storage.py  transcription.py  translation.py
tests/: conftest.py  test_audio.py  test_chunking.py  test_drive.py  test_observability.py  test_orchestrator.py  test_storage.py  test_transcription.py  test_translation.py
